💄 Update UI fix for content jump when scrollbar appears

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -43,3 +43,7 @@ button.btn-custom {
     font-weight: 400;
     color: #bebebe;
 }
+
+html {
+    overflow-y: scroll;
+}
